feat: test protected font

--- a/apps/ui-kit/.storybook/preview-head.html
+++ b/apps/ui-kit/.storybook/preview-head.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://webassets.iota.org/api/protected?face=alliance-no2" />
+<link rel="stylesheet" href="https://webassets-jfvmu6gsz-iota1.vercel.app/api/protected?face=alliance-no2" />
 
 <style>
     body.dark {
