--- a/apps/wallet/src/ui/index.template.html
+++ b/apps/wallet/src/ui/index.template.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title><%= htmlWebpackPlugin.options.title %></title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="stylesheet" href="https://webassets-jfvmu6gsz-iota1.vercel.app/api/protected?face=alliance-no2" crossorigin="use-credentials" referrerpolicy="origin" />
+        <link rel="stylesheet" href="https://webassets-iota-vmmad.vercel.app/api/protected?face=alliance-no2" crossorigin="use-credentials" referrerpolicy="origin" />
     </head>
     <body class="app-initializing">
         <div id="root"></div>
